--- a/e2eTests.gradle
+++ b/e2eTests.gradle
@@ -35,7 +35,8 @@ dependencies {
     e2eTestsImplementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
     e2eTestsImplementation "org.assertj:assertj-core:${assertJVersion}"
     e2eTestsImplementation "org.mockito:mockito-core:${mockitoVersion}"
-    e2eTestsImplementation files('lib/E2EHelper-0.0.3-SNAPSHOT.jar')
+    //e2eTestsImplementation "com.github.inigodm:E2EHelper:master-SNAPSHOT"
+    e2eTestsImplementation 'com.github.inigodm:E2EHelper:master-SNAPSHOT'
     e2eTestsImplementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.3'
     e2eTestsImplementation "org.xerial:sqlite-jdbc:${sqliteVersion}"
     e2eTestsImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.2'
