--- a/e2eTests.gradle
+++ b/e2eTests.gradle
@@ -29,16 +29,16 @@ task e2eTests(type: Test) {
 
 dependencies {
     e2eTestsImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.50"
-    e2eTestsImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    e2eTestsRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-    e2eTestsImplementation 'org.springframework.boot:spring-boot-starter-test'
-    e2eTestsImplementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
+    e2eTestsImplementation "org.junit.jupiter:junit-jupiter:${junit5version}"
+    e2eTestsRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junit5version}"
+    e2eTestsImplementation "org.springframework.boot:spring-boot-starter-test"
+    e2eTestsImplementation group: "com.google.code.gson", name: "gson", version: "${gsonversion}"
     e2eTestsImplementation "org.assertj:assertj-core:${assertJVersion}"
     e2eTestsImplementation "org.mockito:mockito-core:${mockitoVersion}"
     //e2eTestsImplementation "com.github.inigodm:E2EHelper:master-SNAPSHOT"
-    e2eTestsImplementation 'com.github.inigodm:E2EHelper:master-SNAPSHOT'
-    e2eTestsImplementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.3'
+    e2eTestsImplementation "com.github.inigodm:E2EHelper:0.0.5"
+    e2eTestsImplementation group: "com.squareup.okhttp3", name: "okhttp", version: "${okhttp3}"
     e2eTestsImplementation "org.xerial:sqlite-jdbc:${sqliteVersion}"
-    e2eTestsImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.2'
+    e2eTestsImplementation group: "org.junit.platform", name: "junit-platform-launcher", version: "1.8.2"
 
 }
