--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,7 @@
 profile='local'
-assertJVersion=3.21.0
-mockitoVersion=4.1.0
+assertJVersion=3.22.0
+mockitoVersion=4.3.1
 sqliteVersion=3.36.0.3
+junit5version=5.8.2
+gsonversion=2.8.9
+okhttp3=4.9.3
